src/core/window.c
@@ -9523,7 +9523,8 @@ meta_window_update_sync_request_counter (MetaWindow *window,
 
   if (window == window->display->grab_window &&
       meta_grab_op_is_resizing (window->display->grab_op) &&
-      new_counter_value >= window->display->grab_sync_counter_wait_serial)
+      new_counter_value >= window->display->grab_sync_counter_wait_serial &&
+      (!window->extended_sync_request_counter || new_counter_value % 2 == 0))
     {
       meta_topic (META_DEBUG_RESIZING,
                   "Alarm event received last motion x = %d y = %d\n",
